Fixed offset jump links

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -252,7 +253,7 @@ hr {
 
 .dropbtn {
     border: none;
-    padding: 5px 10px;
+    padding: 0px 8px;
     cursor: pointer;
 }
 
@@ -292,6 +293,20 @@ hr {
     background-color: white;
 }
 
+#problem,
+#solution,
+#goals,
+#research,
+#userflows,
+#takeaways,
+#objective,
+#inspiration,
+#wireframe,
+#features,
+#final,
+#conclusion {
+    scroll-margin-top: 130px;
+}
 
 /* class to show dropdown */
 .dropdown.show .dropdown-content {
